--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+ul {
+  list-style-type: none;
+}
+
+
+body {
+  /* background-color: #ECF0F1; */
+}
+
